--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class="titles">
             <h1>ERCAN TOGRUL</h1>
-            <h3>Software Engineer in Tester</h3>
+            <h3>Software Engineer in Tester.</h3>
         </div>
         <div class="links">
             <a href="https://www.linkedin.com/in/ercantogrul/" target="_blank">
